--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -141,10 +141,18 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="retweet-icon" translatesAutoresizingMaskIntoConstraints="NO" id="s9k-Cq-qkw" userLabel="Retweet icon">
                                                     <rect key="frame" x="116" y="114" width="15" height="15"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <gestureRecognizers/>
+                                                    <connections>
+                                                        <outletCollection property="gestureRecognizers" destination="jbC-Zm-n85" appends="YES" id="yqr-98-9Ab"/>
+                                                    </connections>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="favor-icon" translatesAutoresizingMaskIntoConstraints="NO" id="ndp-vk-bje" userLabel="Favorite icon">
                                                     <rect key="frame" x="175" y="114" width="15" height="15"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <gestureRecognizers/>
+                                                    <connections>
+                                                        <outletCollection property="gestureRecognizers" destination="JPo-GK-Egw" appends="YES" id="QjS-AB-h8P"/>
+                                                    </connections>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ULF-7G-Fz5" userLabel="Verified icon">
                                                     <rect key="frame" x="167" y="5" width="15" height="15"/>
@@ -182,15 +190,73 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="ugE-Ul-H9I"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Home Timeline" id="MOc-fV-EZE"/>
+                    <navigationItem key="navigationItem" title="Home Timeline" id="MOc-fV-EZE">
+                        <barButtonItem key="rightBarButtonItem" title="new tweet button" image="edit-icon" id="FIS-Li-Vp7">
+                            <connections>
+                                <segue destination="kqL-t8-mRo" kind="presentation" id="mpz-ZH-8Fb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="Nvx-v7-Sw3" id="79r-Km-fH1"/>
                         <outlet property="tableView" destination="crt-SJ-dyz" id="Jv0-sR-h6o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oQh-hN-GQg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="nD6-nc-pLM" userLabel="Exit" sceneMemberID="exit"/>
+                <tapGestureRecognizer id="jbC-Zm-n85" userLabel="TapGestureRecognizer retweet button">
+                    <connections>
+                        <action selector="didTapRetweet:" destination="nD6-nc-pLM" id="DYB-kV-UGa"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="JPo-GK-Egw" userLabel="TapGestureRecognizer favorite button">
+                    <connections>
+                        <action selector="didTapFavorite:" destination="nD6-nc-pLM" id="8y0-17-sXX"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1660" y="36.431784107946029"/>
+        </scene>
+        <!--Compose View Controller-->
+        <scene sceneID="P2R-HX-Wtq">
+            <objects>
+                <viewController id="Ixx-3a-OwC" customClass="ComposeViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XJ0-F3-nPk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="What's happening?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="q3m-pa-z5H">
+                                <rect key="frame" x="0.0" y="64" width="375" height="243"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="vSx-ty-h7M"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="geJ-sZ-KuX">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="Sqc-PW-pcd">
+                            <connections>
+                                <action selector="backButtonClicked:" destination="Ixx-3a-OwC" id="oTk-UW-qpu"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="xXJ-ps-Ne6">
+                            <connections>
+                                <action selector="tweetButtonClicked:" destination="Ixx-3a-OwC" id="yFU-bC-ao3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="backButton" destination="Sqc-PW-pcd" id="cmg-XK-j5O"/>
+                        <outlet property="tweetButton" destination="xXJ-ps-Ne6" id="fEg-1L-fOW"/>
+                        <outlet property="tweetTextBox" destination="q3m-pa-z5H" id="OKO-EX-N45"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9mV-1p-qbf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3495.1999999999998" y="36.431784107946029"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="WUT-Ke-VeR">
@@ -210,10 +276,29 @@
             </objects>
             <point key="canvasLocation" x="860" y="36.431784107946029"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Yks-0S-tMN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kqL-t8-mRo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bhI-V7-0Q4">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ixx-3a-OwC" kind="relationship" relationship="rootViewController" id="Ubz-zT-jIr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WTO-cM-mnR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2556" y="36.431784107946029"/>
+        </scene>
     </scenes>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
         <image name="back-icon" width="30" height="30"/>
+        <image name="edit-icon" width="30" height="27"/>
         <image name="favor-icon" width="30" height="30"/>
         <image name="reply-icon" width="30" height="30"/>
         <image name="retweet-icon" width="30" height="30"/>
